--- a/org.eclipse.scout.rt.dataobject.test/pom.xml
+++ b/org.eclipse.scout.rt.dataobject.test/pom.xml
@@ -46,6 +46,12 @@
       <artifactId>mockito-core</artifactId>
     </dependency>
 
+    <!-- Jackson used to execute tests using JSON-serialization -->
+    <dependency>
+      <groupId>org.eclipse.scout.rt</groupId>
+      <artifactId>org.eclipse.scout.rt.jackson</artifactId> <!-- use .jackson and not .jackson.test due to cyclic dependencies -->
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
