--- a/scout-jaxws-module/pom.xml
+++ b/scout-jaxws-module/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.eclipse.scout</groupId>
     <artifactId>maven_rt_plugin_config-master</artifactId>
-    <version>3.14.2</version>
+    <version>3.15.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -94,10 +94,10 @@
   <mailingLists>
     <mailingList>
       <name>scout-dev Mailing List</name>
-      <subscribe>https://dev.eclipse.org/mailman/listinfo/scout-dev</subscribe>
-      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/scout-dev</unsubscribe>
+      <subscribe>https://accounts.eclipse.org/mailing-list/scout-dev</subscribe>
+      <unsubscribe>https://accounts.eclipse.org/mailing-list/scout-dev</unsubscribe>
       <post>scout-dev@eclipse.org</post>
-      <archive>https://www.eclipse.org/lists/scout-dev/</archive>
+      <archive>https://www.eclipse.org/lists/scout-dev</archive>
     </mailingList>
   </mailingLists>
 
